<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:transitionName="transition_fab"
    tools:context=".activities.AddNeedlesActivity">

    <include
        android:id="@+id/action_bar"
        layout="@layout/actionbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                style="@style/TextAppearance.App.Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/needle_type" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupNeedleType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipCircular"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/circular" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipDoublePointed"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/double_pointed" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipInterchangeable"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/interchangeable" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipCrochetHook"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/crochet_hook" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipOther"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/other" />
            </com.google.android.material.chip.ChipGroup>

            <TextView
                style="@style/TextAppearance.App.Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:padding="10dp"
                android:text="@string/needle_sizes" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupNeedleSizes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/size2" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip225"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/size225" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip25"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/size25" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip275"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/size275" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/size3" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip325"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/size325" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip35"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/size35" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip375"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/size375" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/size4" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip45"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/size45" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/size5" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip55"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/size55" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/size6" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip65"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/size65" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/size7" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip8"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/size8" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip9"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/size9" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip10"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/size10" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip12"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/size12" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip15"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/size15" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip20"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/size20" />
            </com.google.android.material.chip.ChipGroup>

            <TextView
                style="@style/TextAppearance.App.Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:padding="10dp"
                android:text="@string/needle_length" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupNeedleLen"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipNeedleLen5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/len5" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipNeedleLen10"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/len10" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipNeedleLen12"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/len12" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipNeedleLen14"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/len14" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipNeedleLen20"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/len20" />

            </com.google.android.material.chip.ChipGroup>


            <TextView
                android:id="@+id/add_needles_view_wireLen"
                style="@style/TextAppearance.App.Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:padding="10dp"
                android:text="@string/wire_length"
                android:visibility="gone"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupWireLen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipWireLen13"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/len13" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipWireLen20"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/len20" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipWireLen30"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/len30" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipWireLen40"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/len40" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipWireLen60"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/len60" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipWireLen80"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/len80" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipWireLen100"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/len100" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipWireLen120"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/len120" />

            </com.google.android.material.chip.ChipGroup>

            <TextView
                style="@style/TextAppearance.App.Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:padding="10dp"
                android:text="@string/material" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupMaterial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMaterialWood"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/wood" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMaterialBamboos"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/bamboos" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMaterialMetal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/metal" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMaterialOther"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/other" />
            </com.google.android.material.chip.ChipGroup>

            <TextView
                style="@style/TextAppearance.App.Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:padding="10dp"
                android:text="@string/notes" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/needles_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>