<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/projects"
        android:icon="@drawable/icon_inbox"
        android:id="@+id/projects"
        android:enabled="true"/>
    <item
        android:title="@string/storage"
        android:icon="@drawable/icon_inventory"
        android:id="@+id/storage"
        android:enabled="true"/>
    <item
        android:title="@string/tools"
        android:icon="@drawable/icon_square_foot"
        android:id="@+id/tools"
        android:enabled="true"/>
    <item
        android:title="@string/videos"
        android:icon="@drawable/icon_video_library"
        android:id="@+id/videos"
        android:enabled="true"/>
    <item
        android:title="@string/profile"
        android:icon="@drawable/icon_person"
        android:id="@+id/profile"
        android:enabled="true"/>
</menu>