<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/item_yarn_move_brand"
            style="@style/TextAppearance.App.Subtitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yarn_brand" />

        <TextView
            android:id="@+id/item_yarn_move_name"
            style="@style/TextAppearance.App.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/yarn_name" />

        <TextView
            android:id="@+id/item_yarn_move_color"
            style="@style/TextAppearance.App.Overline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yarn_color" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/amount_grams_leftover"
            app:suffixText="@string/grams">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/item_yarn_move_edit_amount_grams"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>
</com.google.android.material.card.MaterialCardView>