<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ToolsFragment">

    <TextView
        style="@style/TextAppearance.App.Headline1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/tools" />

    <Button
        android:id="@+id/tools_btn_counter"
        style="@style/Widget.App.Button.Primary"
        android:layout_gravity="center"
        android:layout_width="280dp"
        android:layout_height="66dp"
        android:layout_marginTop="40dp"
        android:text="@string/counter" />

    <Button
        android:id="@+id/tools_btn_calculate"
        style="@style/Widget.App.Button.Primary"
        android:layout_width="280dp"
        android:layout_height="66dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/calculate_yarn_amount"
        />

</LinearLayout>